<resources>
    <string name="app_name">Blood Bank</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="gender">Gender</string>
    <string name="gender_prompt">Select gender</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="pick">Pick</string>
    <string name="last_donation">Last Donation</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="blood_group_prompt">Select blood group</string>
    <string name="blood_group">Blood Group</string>
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="blood_group_arrays">
        <item>O−</item>
        <item>O+</item>
        <item>A−</item>
        <item>A+</item>
        <item>B−</item>
        <item>B+</item>
        <item>AB−</item>
        <item>AB+</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="permission_rationale">"External storage permissions are needed for picture"</string>
    <string name="address">Address</string>
    <string name="title_activity_splash">Splash Screen</string>
    <string name="title_activity_list">Donor List</string>
</resources>
