<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIndigo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csecu.amrit.bloodbank.activities.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registration_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registration_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registration_et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:ems="10"
                android:hint="@string/contact"
                android:inputType="phone" />

            <EditText
                android:id="@+id/registration_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registration_et_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registration_et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_accessibility_black_24dp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number" />

            <EditText
                android:id="@+id/registration_et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_place_black_24dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    android:padding="10dp"
                    android:text="@string/gender"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/registration_spinner_gender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/gender_arrays"
                    android:prompt="@string/gender_prompt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_opacity_black_24dp"
                    android:padding="10dp"
                    android:text="@string/blood_group"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/registration_spinner_bloodGroup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/blood_group_arrays"
                    android:prompt="@string/blood_group_prompt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_add_a_photo_black_24dp"
                    android:padding="10dp"
                    android:text="@string/profile_picture"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/registration_tv_picture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/profile_picture"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/registration_bt_picture"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onTakePhoto"
                    android:text="@string/pick" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_date_range_black_24dp"
                    android:padding="10dp"
                    android:text="@string/last_donation"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/registration_tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/last_donation"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/registration_bt_date"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:onClick="onPickDate"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pick" />
            </LinearLayout>

            <Button
                android:id="@+id/registration_bt_submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_action_submit"
                android:onClick="onSubmit"
                android:text="@string/sign_up" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
